[gd_scene load_steps=6 format=3 uid="uid://bjdfvh8ybi0ix"]

[ext_resource type="Script" path="res://assets/ui/thro_dice.gd" id="1_a11pi"]
[ext_resource type="Texture2D" uid="uid://b3mdgkxx3lrhs" path="res://assets/ui/panel.png" id="1_wqpad"]
[ext_resource type="PackedScene" uid="uid://xsnnc3rihlui" path="res://dice/DiceCup.tscn" id="2_8moyy"]
[ext_resource type="FontFile" uid="uid://bacyjx7mbmrj" path="res://fonts/superstar_memesbruh03.ttf" id="3_5l4me"]
[ext_resource type="Texture2D" uid="uid://cl8n3505t5c3y" path="res://dice/dice_cup_info_panel_sheet.png" id="5_i1h8i"]

[node name="ThroDice" type="Control"]
z_index = 20
z_as_relative = false
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_a11pi")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 11.0
offset_right = 306.0
offset_bottom = 227.0
texture = ExtResource("1_wqpad")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="DiceCup" parent="NinePatchRect" instance=ExtResource("2_8moyy")]
layout_mode = 2
offset_left = 126.0
offset_top = 191.0
offset_right = 126.0
offset_bottom = 191.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.6, 0.6)

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 2
offset_left = 7.0
offset_top = 6.0
offset_right = 247.0
offset_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5l4me")
text = "Water pump"

[node name="RichTextLabel" type="RichTextLabel" parent="NinePatchRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(230, 2.08165e-12)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_5l4me")
text = "Looks like again the pump stop working. "
fit_content = true

[node name="ButtonCancel" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 141.0
offset_right = 66.0
offset_bottom = 165.0
theme_override_fonts/font = ExtResource("3_5l4me")
text = "Cancel"

[node name="ProgressBar" type="ProgressBar" parent="NinePatchRect"]
layout_mode = 0
offset_left = 76.0
offset_top = 141.0
offset_right = 156.0
offset_bottom = 168.0

[node name="ButtonTry" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 165.0
offset_top = 138.0
offset_right = 198.0
offset_bottom = 169.0
theme_override_fonts/font = ExtResource("3_5l4me")
action_mode = 0
text = "Try"

[node name="TextureRect" type="Sprite2D" parent="NinePatchRect/ButtonTry"]
position = Vector2(57, 16)
scale = Vector2(2, 2)
texture = ExtResource("5_i1h8i")
hframes = 8

[node name="LabelRiskLevel" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 165.0
offset_top = 114.0
offset_right = 205.0
offset_bottom = 137.0
theme_override_colors/font_color = Color(0.905882, 0.905882, 0.905882, 1)
theme_override_fonts/font = ExtResource("3_5l4me")
text = "SAFE"

[connection signal="pressed" from="NinePatchRect/ButtonCancel" to="." method="_on_button_cancel_pressed"]
[connection signal="pressed" from="NinePatchRect/ButtonTry" to="." method="_on_button_try_pressed"]
